# iconbrowser

./: .gitignore  README.md  io.elementary.iconbrowser.yml  meson.build
.github/workflows/: ci.yml  merge.yml  release.yml
data/: Application.css  iconbrowser.appdata.xml.in  iconbrowser.desktop.in  iconbrowser.gresource.xml  iconbrowser.gschema.xml  meson.build
po/: LINGUAS  POTFILES  ca.po  en_GB.po  fr.po  io.elementary.iconbrowser.pot  ja.po  ka.po  mr.po  nb.po  pt.po  ru.po  sk.po  sv.po  uk.po  zh_CN.po  zh_Hant.po
po/extra/: LINGUAS  POTFILES  ca.po  es_US.po  extra.pot  fr.po  ja.po  ka.po  mr.po  nb.po  pt.po  ru.po  sv.po  uk.po  zh_Hant.po
src/: Application.vala  CategoryView.vala  IconCollection.vala  IconDetails.vala  IconView.vala  MainWindow.vala
src/Dialogs/: IconView.vala
src/Services/: Collection.vala
src/Widgets/: IconListChild.vala  IconListRow.vala  SidebarRow.vala
